# PLinf

./: .gitignore  LICENSE  Makefile  README.md  build.py  pyproject.toml
plinf/: __init__.py  core.c  core.pyi  core.pyx  runner.py
plinf/core/: intermediate.c  opcode_out.c  opcode_out.h  plinf.tab.c  plinf.tab.h  plinf.y  plinf.yy.c  tree_out.c  tree_out.h
plinf/gui/: gui.py  index.html
plinf/gui/css/: main.css
plinf/gui/js/: main.js
src/: intermediate.c  intermediate.h  opcode_out.c  opcode_out.h  plinf.l  plinf.tab.c  plinf.tab.h  plinf.y  plinf.yy.c  tree_out.c  tree_out.h
test/: PreTest1.pl0  PreTest10.pl0  PreTest2.pl0  PreTest3.pl0  PreTest4.pl0  PreTest5.pl0  PreTest6.pl0  PreTest7.pl0  PreTest8.pl0  PreTest9.pl0  test.plinf  test_core.py  test_grammar.c  test_lexical.c  test_opcode.c
