[tool.poetry]
name = "plinf"
version = "0.1.0"
description = "PL/inf - extends the PL/0"
authors = ["yanyongyu <yanyongyu_1@126.com>"]
license = "MIT"
build = "build.py"
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
Cython = "^0.29.23"
PyQt5 = "^5.15.4"
PyQtWebEngine = "^5.15.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
Nuitka = "^0.6.16"

[tool.poetry.scripts]
plinf = "plinf.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
